

#set cp_vdu_simple_demo executable name
SET(CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME cp_vdu_simple_demo)

#set cp_vdu_simple_demo root directory
SET(CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR ${CP_APP_VDU_SIMPLE_DEMO_DIR})


#set src directory
SET(CP_VDU_SIMPLE_DEMO_SRC_DIR ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/src)
#set include directory
SET(CP_VDU_SIMPLE_DEMO_INCLUDE_DIR ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/include)
#set lib directory
SET(CP_VDU_SIMPLE_DEMO_LIBRARY_DIR ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/lib)



#set qt library information
SET(QT_INCLUDE_DIR ${CP_THIRD_PARTY_DIR}/lib/arm-hisiv400/qt-5.9.6/include)
SET(QT_LIBRARY_DIR ${CP_THIRD_PARTY_DIR}/lib/arm-hisiv400/qt-5.9.6/lib)



#set hi3536 gpu library information
SET(HI3536_GPU_INCLUDE_DIR ${CP_THIRD_PARTY_DIR}/src/hi/hi3536/mpp_single/component/gpu/release/include)
SET(HI3536_GPU_LIBRARY_DIR ${CP_THIRD_PARTY_DIR}/src/hi/hi3536/mpp_single/component/gpu/release/lib)



#get file list
AUX_SOURCE_DIRECTORY(${CP_VDU_SIMPLE_DEMO_SRC_DIR} CP_VDU_SIMPLE_DEMO_EXECUTABLE_FILES_LIST)

#add all subdirectory
#ADD_SUBDIRECTORY(${CP_VDU_SIMPLE_DEMO_SRC_DIR})

#MESSAGE(STATUS "CP_VDU_SIMPLE_DEMO_EXECUTABLE_FILES_LIST : "${CP_VDU_SIMPLE_DEMO_EXECUTABLE_FILES_LIST})

#add player include direntories
INCLUDE_DIRECTORIES(
    ${CP_VDU_SIMPLE_DEMO_INCLUDE_DIR}
    ${QT_INCLUDE_DIR}
    ${HI3536_GPU_INCLUDE_DIR}
    )

MESSAGE(STATUS "CP_VDU_SIMPLE_DEMO_INCLUDE_DIR : "${CP_VDU_SIMPLE_DEMO_INCLUDE_DIR})


#add player library directories 
LINK_DIRECTORIES(
    ${CP_VDU_SIMPLE_DEMO_LIBRARY_DIR}
    ${QT_LIBRARY_DIR}
    ${HI3536_GPU_LIBRARY_DIR}
    )

#MESSAGE(STATUS "CP_VDU_SIMPLE_DEMO_LIBRARY_DIR : "${CP_VDU_SIMPLE_DEMO_LIBRARY_DIR})


#add targe
SET(EXECUTABLE_OUTPUT_PATH ${CP_PROJECT_OUTPUT_TOP_DIR}/${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME})

MESSAGE(STATUS " ")
MESSAGE(STATUS " ")
MESSAGE(STATUS "-----------------build project:[ ${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME} ]-----------------")
MESSAGE(STATUS "c compiler:[ ${CMAKE_C_COMPILER} ] cxx compiler:[ ${CMAKE_CXX_COMPILER} ]")
MESSAGE(STATUS "project:[ ${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME} ] path  : [ ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR} ]")
MESSAGE(STATUS "project:[ ${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME} ] output: [ ${EXECUTABLE_OUTPUT_PATH} ]")
MESSAGE(STATUS "executable:[${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME}]")


ADD_EXECUTABLE(${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME} ${CP_VDU_SIMPLE_DEMO_EXECUTABLE_FILES_LIST})
TARGET_LINK_LIBRARIES(${CP_VDU_SIMPLE_DEMO_EXECUTABLE_NAME}
    ${CP_PROJECT_LIBRARY_STATIC_NAME} 
	${CP_VDU_LIBRARY_LIBRARY_STATIC_NAME}
    -lQt5Charts
	-lQt5Svg
	-lQt5Widgets
	-lQt5Core
	-lQt5Gui
	-lEGL
	-lGLESv1_CM
	-lGLESv2
	-lmali
)


#install executable source
SET(CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR ${EXECUTABLE_OUTPUT_PATH})
SET(CP_VDU_PROJECT_INSTALL_DOC_DIR ${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR}/doc)
SET(CMAKE_INSTALL_PREFIX ${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR})

MESSAGE(STATUS "install path:[${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR}]")

INSTALL(FILES
	${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/Changes.txt
	DESTINATION ${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR})

INSTALL(DIRECTORY ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/lib DESTINATION ${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR})
INSTALL(DIRECTORY ${CP_VDU_SIMPLE_DEMO_PROJECT_SOURCE_DIR}/src/files DESTINATION ${CP_VDU_SIMPLE_DEMO_PROJECT_INSTALL_DIR})





