

#set test_libuv_multicast executable name
SET(CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME test_libuv_tcp_client)


#get file list
AUX_SOURCE_DIRECTORY(${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_DIR} CP_TESTS_LINUX_LIBUV_TCP_CLIENT_FILES_LIST)


#add test_libuv_multicast include direntories
INCLUDE_DIRECTORIES(
    ${CP_PLAYER_INCLUDE_DIR}
    ${CP_THIRD_PARTY_DIR}/libuv-v1.11.0/test
    )


#add test_libuv_multicast library directories 
LINK_DIRECTORIES(
    ${CP_PLAYER_LIBRARY_DIR}
    )


#add targe
SET(EXECUTABLE_OUTPUT_PATH ${CP_PROJECT_OUTPUT_TOP_DIR}/${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME})

MESSAGE(STATUS " ")
MESSAGE(STATUS " ")
MESSAGE(STATUS "-----------------build project:[ ${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME} ]-----------------")
MESSAGE(STATUS "c compiler:[" ${CMAKE_C_COMPILER} "] cxx compiler:[" ${CMAKE_CXX_COMPILER} "]")
MESSAGE(STATUS "project[" ${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME} "] path: "${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_DIR})
MESSAGE(STATUS "project[" ${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME} "] output: "${EXECUTABLE_OUTPUT_PATH})


SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pie")


ADD_EXECUTABLE(${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME} ${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_FILES_LIST})
TARGET_LINK_LIBRARIES(${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME}
			libuv.a
		)
		
MESSAGE(STATUS "executable:[${CP_TESTS_LINUX_LIBUV_TCP_CLIENT_NAME}]")



