#set src files list
#set css_encrypt dev directory

#set dev hi3536 directory
SET(CP_CSS_ENCRYPT_SRC_HI3536_DEV_DIR ${CP_CSS_ENCRYPT_SRC_DEV_DIR}/hi3536)
#set dev hi3531 directory
SET(CP_CSS_ENCRYPT_SRC_HI3531_DEV_DIR ${CP_CSS_ENCRYPT_SRC_DEV_DIR}/hi3531)


#add css_encrypt dev source directory
AUX_SOURCE_DIRECTORY(${CP_CSS_ENCRYPT_SRC_DEV_DIR} CP_CSS_ENCRYPT_SRC_DEV_FILES_LIST)


ADD_SUBDIRECTORY(${CP_CSS_ENCRYPT_SRC_HI3531_DEV_DIR})
ADD_SUBDIRECTORY(${CP_CSS_ENCRYPT_SRC_HI3536_DEV_DIR})


#IF(${CP_PLATFORM} STREQUAL "arm-hisiv100nptl")
	#add dev source directory
	#ADD_SUBDIRECTORY(${CP_CSS_ENCRYPT_SRC_DEV_DIR}/hi3531)
#ENDIF()

#IF(${CP_PLATFORM} STREQUAL "hisiv400")
	#add dev source directory
	#ADD_SUBDIRECTORY(${CP_CSS_ENCRYPT_SRC_DEV_DIR}/hi3536)
#ENDIF()


#add source file list
SET(CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST 
	${CP_CSS_ENCRYPT_EXECUTABLE_FILES_LIST} 
	${CP_CSS_ENCRYPT_SRC_DEV_FILES_LIST} 

	PARENT_SCOPE
	)

#add include dir
SET(CP_CSS_ENCRYPT_INCLUDE_DIR ${CP_CSS_ENCRYPT_INCLUDE_DIR} 
	${CP_CSS_ENCRYPT_SRC_DEV_DIR}

	PARENT_SCOPE
	)