#set src files list
#set demo hook directory

#add demo HOOK source directory
AUX_SOURCE_DIRECTORY(${CP_DEMO_SRC_FILTER_DIR} CP_DEMO_SRC_FILTER_FILES_LIST)


#build sub directory
ADD_SUBDIRECTORY(${CP_DEMO_SRC_FILTER_DIR}/rtp)


#build sub directory
ADD_SUBDIRECTORY(${CP_DEMO_SRC_FILTER_DIR}/memh)


#add source file list
SET(CP_DEMO_EXECUTABLE_FILES_LIST 
	${CP_DEMO_EXECUTABLE_FILES_LIST} 
	${CP_DEMO_SRC_FILTER_FILES_LIST} 

	PARENT_SCOPE
	)

#add include dir
SET(CP_DEMO_INCLUDE_DIR 
    ${CP_DEMO_INCLUDE_DIR} 
	${CP_DEMO_SRC_FILTER_DIR}

	PARENT_SCOPE
	)
