#set src files list

#add ecam func source directory
AUX_SOURCE_DIRECTORY(${CP_ECAM_SRC_FUNC_DIR} CP_ECAM_SRC_FUNC_FILES_LIST)




#set func ecam directory
SET(CP_ECAM_SRC_FUNC_ECAM_DIR ${CP_ECAM_SRC_FUNC_DIR}/ecam)

#add core source directory
ADD_SUBDIRECTORY(${CP_ECAM_SRC_FUNC_ECAM_DIR})


#add source file list
SET(CP_ECAM_EXECUTABLE_FILES_LIST 
	${CP_ECAM_EXECUTABLE_FILES_LIST} 
	${CP_ECAM_SRC_FUNC_FILES_LIST} 

	PARENT_SCOPE
	)




#add include dir
SET(CP_ECAM_INCLUDE_DIR ${CP_ECAM_INCLUDE_DIR} 
	${CP_ECAM_SRC_FUNC_DIR}

	PARENT_SCOPE
	)